--- a/Contents/Info.plist
+++ b/Contents/Info.plist
@@ -21,7 +21,7 @@
 		<string>MP3</string>
 	</array>
 	<key>PlexClientPlatforms</key>
-	<string>MacOSX,iOS</string>
+	<string>MacOSX,iOS,Android</string>
 	<key>PlexFrameworkVersion</key>
 	<string>1</string>
 	<key>PlexPluginDebug</key>
