--- a/Contents/Info.plist
+++ b/Contents/Info.plist
@@ -23,10 +23,12 @@
 	<key>PlexClientPlatforms</key>
 	<string>MacOSX,iOS,Android,LGTV</string>
 	<key>PlexFrameworkVersion</key>
-	<string>1</string>
-	<key>PlexPluginDebug</key>
+	<string>2</string>
+	<key>PlexPluginConsoleLogging</key>
 	<string>1</string>
 	<key>PlexPluginMode</key>
 	<string>AlwaysOn</string>
+	<key>PlexPluginCodePolicy</key>
+	<string>Elevated</string>
 </dict>
 </plist>
